[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audiolm"
description = "AudioLM - Language Modeling Approach to Audio Generation"
readme = "README.md"
authors = [
  {name = "Phil Wang", email = "lucidrains@gmail.com"},
]
dynamic = ["version"]
dependencies = [
  "accelerate",
  "beartype",
  "einops>=0.6",
  "ema-pytorch",
  "fairseq",
  "joblib",
  "lion-pytorch",
  "local-attention>=1.8.4",
  "scikit-learn>=1.2",
  "sentencepiece",
  "transformers>=4.26",
  "tqdm",
  "vector-quantize-pytorch>=1.0.6",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy==1.1.1", "pydantic>=1.10", "types-tqdm"]
torch = ["torch>=1.12.1", "torchvision>=0.13.1", "torchaudio>=0.12.1"]

[tool.setuptools.dynamic]
version = {attr = "audiolm.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = "submodules/*"

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
  "numpy.typing.mypy_plugin",
]

[[tool.mypy.overrides]]
module = [
  "hydra.*",
  "librosa.*",
  "mirdata.*",
  "pytest.*",
  "pytorch_lightning.*",
  "lightning_utilities.*",
  "sklearn.*",
  "scipy.*",
  "torch.*",
  "torchaudio.*",
  "torchvision.*",
  "transformers",
  "wget",

]
ignore_missing_imports = true
